Contrast fix

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -87,6 +87,7 @@ footer {
 	justify-content: flex-start;
 	align-items: center;
 	background-color: var(--main-color);
+	color: white;
 }
 
 .nav-wrapper h2 {
